cmd/basal-gateway/k8s/02-basal-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basal-gateway
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: basal-gateway
  template:
    metadata:
      labels:
        app: basal-gateway
    spec:
      containers:
        - name: basal-gateway
          image: uhub.service.ucloud.cn/entropypool/basal-gateway:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/BasalGateway
      volumes:
        - name: service-config
          configMap:
            name: basal-gateway-config
            items:
              - key: service-conf
                path: BasalGateway.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: basal-gateway
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50640
      targetPort: 50640
    - name: grpc
      port: 50641
      targetPort: 50641
    - name: healthz
      port: 50642
      targetPort: 50642
    - name: prometheus
      port: 50643
      targetPort: 50643
  selector:
    app: basal-gateway
