cmd/basal-gateway/k8s/04-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basal-gateway-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: basal-gateway-traefik-app
    k8s.kuboard.cn/workload: basal-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-basal-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/basal/v1/version
            backend:
              serviceName: basal-gateway
              servicePort: 50640
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
    - host: api.hk-cryptomore-production.npool.top
      http: *http_rules
    - host: api.cryptomore.io
      http: *http_rules
    - host: api.epool.tech
      http: *http_rules
    - host: api.xhash.ai
      http: *http_rules
    - host: api.tokyo-xhash-production.npool.top
      http: *http_rules
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basal-gateway-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: basal-gateway-traefik-app-user
    k8s.kuboard.cn/workload: basal-gateway-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-basal-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/basal/v1/get
            backend:
              serviceName: basal-gateway
              servicePort: 50640
          - path: /api/basal/v1/update
            backend:
              serviceName: basal-gateway
              servicePort: 50640
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
    - host: api.hk-cryptomore-production.npool.top
      http: *http_rules
    - host: api.cryptomore.io
      http: *http_rules
    - host: api.epool.tech
      http: *http_rules
    - host: api.xhash.ai
      http: *http_rules
    - host: api.tokyo-xhash-production.npool.top
      http: *http_rules
